(fix)|KH-135|Fix delete button alignment wrt textInput

--- a/packages/esm-patient-registration-app/src/patient-registration/input/input.scss
+++ b/packages/esm-patient-registration-app/src/patient-registration/input/input.scss
@@ -88,8 +88,6 @@
 .IDInput {
   display: grid;
   grid-template-columns: 1fr auto;
-  align-items: center;
-  max-width: 27rem;
 }
 
 .trashCan {
